 65. New Fighter Skills: Double Arm Hold, Leg Hold, Finger Lock, Ankle Lock, Wrist Lock
 66. New Fighter Skills: Elbow Lock, Bulldog, Gutbuster, Knee, Elbow Jab, Earbox
 67. Deities should be given weapons to influence craft holy avenger and other holy magic.
 68. New Fighter Skills: Forearm Block, Breakout
 69. New INI entry TRAINCOSTS for setting (or removing) costs for various things.

# Build 5.9.12 Release 1/17/2022
  *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
  1. Prop_Have/WearAdjuster supports item sets now
  2. MANACOST and MANAMINCOST entries in coffeemud.ini allows more flexible skill costs
  3. Skill use will now attempt to check range before consuming mana/resources
  4. New locale types: undergroundcitystreet and underwatercitystreet
  5. New command: abilities
  6. Default MINMANACOST is now skill level or 10, whichever is greater.
  7. Many crafting skills now support FROM syntax to specify specific resources.
  8. Metacraft will select random resource by weight.  New value filter for metacraft in Random Generator.
  9. All achievements now support PLAYERMASK, even if it makes no sense.
 10. Lots of new achievements -- mostly skill proficiency related
 11. Prop_InstantDeath can now kill you less instantly.
 12. STARTMANA, STARTMOVE, and STARTHP in ini file can append to class changes/level.
 13. New INI entry: BONUSACT -- for global action bonus tweeking
 14. Crafting skill INFO command now supports expertises and specific resources
 15. CLASSSYSTEM has new class limit boundary options, and new GAIN and SWITCH for train cost.
 16. New achievement flag: REMORT, for forcing remorting players to re-acquire player achievements.
 17. Alchemy now supports powders/dusts
 18. New prayer: sense chants
 19. Weaponsmith/Fletching/leatherworking now supports min/max range data
 20. New achievement type GROUPKILL
 21. Socials now support flags.  Initial flags for confirming, target confirming.