@@ -1709,14 +1709,13 @@ may be used to take Quest Points from players using this command.
 
 SHUTDOWN=\
 Command : SHUTDOWN\n\r\
-Usage   : SHUTDOWN (IN [NUMBER] [MINS/HOURS..]) (RESTART) (NOPROMPT) \n\r\
+Usage   : SHUTDOWN (IN [NUMBER] [MINS/HOURS..]) (NOPROMPT) \n\r\
 Example : shutdown\n\r\
 Example : shutdown noprompt\n\r\
-Example : shutdown in 10 minutes restart\n\r\
-Example : shutdown at 11:00 pm restart\n\r\
+Example : shutdown in 10 minutes\n\r\
+Example : shutdown at 11:00 pm\n\r\
 Short(s): \n\r\
 With no argument, this command will bring down the CoffeeMud server. \
-With the restart argument, it will "bounce" (restart) the server. \
 You can also specify how long before the shutdown will begin.  This \
 will also cause periodic warnings to your players.
 
