@@ -68,6 +68,7 @@
  67. Deities should be given weapons to influence craft holy avenger and other holy magic.
  68. New Fighter Skills: Forearm Block, Breakout
  69. New INI entry TRAINCOSTS for setting (or removing) costs for various things.
+ 70. Shutdown-restart has been removed.  It never really worked right anyway.
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
